--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/acquistoStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/acquistoStage.fxml
@@ -7,18 +7,19 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 7; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.AcquistoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 7; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.AcquistoController">
    <children>
       <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../../../../../Downloads/libri800x900.png" />
          </image>
       </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="665.0" layoutX="93.0" layoutY="92.0" stroke="#de5f4f" strokeWidth="2.0" width="706.0" />
-      <Button fx:id="buttonClose" layoutX="35.0" layoutY="736.0" mnemonicParsing="false" onAction="#close" style="-fx-background-color: #2b2d30;" text="Close" textFill="WHITE" />
-      <TableView fx:id="tableView" fixedCellSize="0.0" layoutX="14.0" layoutY="58.0" prefHeight="395.0" prefWidth="471.0" AnchorPane.bottomAnchor="83.0" AnchorPane.leftAnchor="90.0" AnchorPane.rightAnchor="103.0" AnchorPane.topAnchor="175.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="587.0" layoutX="91.0" layoutY="148.0" stroke="#de5f4f" strokeWidth="2.0" width="710.0" />
+      <Button fx:id="buttonClose" layoutX="424.0" layoutY="691.0" mnemonicParsing="false" onAction="#close" style="-fx-background-color: #2b2d30;" text="Close" textFill="WHITE" />
+      <TableView fx:id="tableView" fixedCellSize="0.0" layoutX="93.0" layoutY="202.0" prefHeight="498.0" prefWidth="720.0" AnchorPane.bottomAnchor="114.80000000000018" AnchorPane.leftAnchor="93.0" AnchorPane.rightAnchor="102.20000000000005" AnchorPane.topAnchor="202.0">
          <columns>
             <TableColumn fx:id="codaColumn" prefWidth="54.0" text="CodA" />
             <TableColumn fx:id="nomeColumn" prefWidth="241.0" text="Titolo" />
@@ -26,6 +27,17 @@
             <TableColumn fx:id="indirizzoColumn" prefWidth="315.0" text="Indirizzo" />
          </columns>
       </TableView>
-      <Text layoutX="284.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui trovi dov'è possibile aquistare il libro da  te selezionato" />
+      <Text layoutX="297.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi con il tasto destro del mouse per le azioni" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="73.0" layoutX="87.0" layoutY="53.0" stroke="#de5f4f" strokeWidth="2.0" width="718.0" />
+      <Text fill="#2b2d30" layoutX="94.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello Di Visualizzazione Acquisto" wrappingWidth="435.6032905578613">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Text>
+      <Text fill="#2b2d30" layoutX="104.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui potrai vedere le dove acquistare la tua scelta">
+         <font>
+            <Font name="Arial" size="17.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
